--- a/config/config_log.cfg
+++ b/config/config_log.cfg
@@ -10,28 +10,28 @@ keys=Formatter_console,Formatter_file
 
 # Configuration of loggers, handlers and formaters 
 [logger_root]
-level=DEBUG
+level=INFO
 handlers=consoleHandler,fileHandler
 
 [handler_consoleHandler]
 class=StreamHandler
-level=DEBUG
+level=INFO
 formatter=Formatter_console
 args=(sys.stdout,) 
 
 [handler_fileHandler]
 class=handlers.TimedRotatingFileHandler 
-level=DEBUG
+level=INFO
 formatter=Formatter_file
-kwargs={'filename': 'log_grup_a.log', 'when': 'd','interval': 7}
+kwargs={'filename': 'logs/extraction.log', 'when': 'd','interval': 7}
 
 
-#console format (%d-%m-%Y_levelname_name_message)
+#console format (%Y-%m-%d %H:%M levelname-name: message)
 [formatter_Formatter_console]
-format=%(asctime)s_%(levelname)s_%(name)s_%(message)s
-datefmt=%d-%b-%Y
+format=(%(asctime)s) %(levelname)s-%(name)s: %(message)s
+datefmt=%Y-%m-%d %H:%M
 
-#file format (%d-%m-%Y_levelname_name_message)
+#file format (%Y-%m-%d %H:%M levelname-name: message)
 [formatter_Formatter_file]
-format=%(asctime)s_%(levelname)s_%(name)s_%(message)s
-datefmt=%d-%b-%Y 
+format=(%(asctime)s) %(levelname)s-%(name)s: %(message)s
+datefmt=%Y-%m-%d %H:%M
